# concord

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix
.github/: labeler.yml
.github/workflows/: ci.yml  crates-publish.yml  issue-labeler.yml  release-cache-seed.yml  release.yml
docs/: keymap-options.md
src/: app.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  support.rs  token_store.rs
src/app/: command_dispatch.rs  credentials.rs  gateway_commands.rs  history_commands.rs  inbox_commands.rs  media_adapters.rs  message_commands.rs  notification_commands.rs  session_commands.rs  user_commands.rs  voice_commands.rs
src/config/: options.rs  parse.rs  tests.rs
src/discord/: action_policy.rs  application_commands.rs  auth_http.rs  channel.rs  client.rs  commands.rs  display_name.rs  events.rs  fingerprint.rs  gateway.rs  guild.rs  ids.rs  json.rs  member.rs  message.rs  mod.rs  notification.rs  password_auth.rs  permission.rs  presence.rs  profile.rs  qr_auth.rs  read.rs  request_lifecycle.rs  rest.rs  state.rs  verification.rs  voice.rs
src/discord/channel/: info.rs  state.rs
src/discord/client/: lifecycle.rs  rest_actions.rs  tests.rs
src/discord/fingerprint/: tests.rs
src/discord/gateway/: parser.rs  tests.rs
src/discord/gateway/parser/: channels.rs  guilds.rs  members.rs  messages.rs  notifications.rs  presence.rs  ready.rs  relationships.rs  shared.rs  tests.rs  voice.rs
src/discord/guild/: state.rs
src/discord/member/: state.rs
src/discord/message/: info.rs  state.rs
src/discord/notification/: state.rs
src/discord/permission/: state.rs
src/discord/read/: state.rs
src/discord/request_lifecycle/: primitives.rs  tests.rs
src/discord/rest/: application.rs  application_commands.rs  connection.rs  forum.rs  messages.rs  notification_settings.rs  profile.rs  reactions.rs  read_state.rs  search.rs  tests.rs
src/discord/rpc/: codec.rs  mod.rs  protocol.rs  registry.rs  socket.rs
src/discord/state/: caches.rs  channels.rs  guilds.rs  members.rs  messages.rs  notifications.rs  permissions.rs  presence.rs  profiles.rs  reads.rs  snapshot.rs  voice.rs
src/discord/state/tests/: channels.rs  guilds.rs  members.rs  messages.rs  mod.rs  notifications.rs  permissions.rs  profiles.rs  reads.rs
src/discord/voice/: dave.rs  gateway.rs  levels.rs  microphone.rs  opus.rs  outbound.rs  playback.rs  runtime.rs  state.rs  tests.rs
src/support/: audio_output.rs  paths.rs  private_file.rs  token_store.rs  version_check.rs
src/tui/: clipboard.rs  commands.rs  effects.rs  events.rs  format.rs  fuzzy.rs  input.rs  keybinding.rs  keybindings.rs  login.rs  media.rs  message_format.rs  message_rows.rs  mod.rs  redraw.rs  requests.rs  runtime.rs  selection.rs  state.rs  terminal.rs  text.rs  text_input.rs  theme.rs  ui.rs
src/tui/input/: keyboard.rs  mouse.rs  tests.rs
src/tui/input/keyboard/: composer.rs  dashboard.rs  mod.rs  paste.rs  popups.rs
src/tui/input/tests/: composer.rs  leader.rs  messages.rs  misc.rs  mouse.rs  navigation.rs  options.rs
src/tui/keybindings/: actions.rs  composer.rs  mod.rs  runtime.rs  tests.rs
src/tui/login/: render.rs  state.rs  terminal_events.rs  tests.rs
src/tui/media/: avatar.rs  cache.rs  emoji.rs  lru.rs  preview.rs  protocol.rs  targets.rs  tests.rs
src/tui/message/: format.rs  syntax_highlight.rs
src/tui/message/format/: attachments.rs  embed.rs  (+4 more)
src/tui/runtime/: effects.rs  events.rs  image_layer.rs  media_runtime.rs  mod.rs  notification_audio.rs  redraw.rs  redraw_gate.rs  scheduler.rs
src/tui/state/: channel_rows.rs  channel_switcher.rs  channels.rs  composer.rs  composer_state.rs  dashboard.rs  diagnostics.rs  discord_ui.rs  emoji.rs  events.rs  fuzzy.rs  guilds.rs  image_viewer.rs  layout_cache.rs  local_upload_preview.rs  member_grouping.rs  message_actions.rs  message_layout.rs  message_render.rs  message_viewport.rs  model.rs  navigation.rs  options.rs  pane_filter.rs  pending_messages.rs  polls.rs  popups.rs  presence_picker.rs  presentation.rs  reactions.rs  runtime_state.rs  scroll.rs  subscriptions.rs  text_completion.rs  toast.rs  user.rs  voice_actions.rs
src/tui/text/: tests.rs
src/tui/ui/: activity.rs  emoji_overlay.rs  forum.rs  hit_test.rs  interaction.rs  layout.rs  loading_indicator.rs  message_list.rs  panes.rs  popups.rs  tests.rs  types.rs
tests/: config_loading.rs
(+73 files in other folders)
