[package]
name = "discord-client-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
image = "0.25.9"
qrcode = { version = "0.14.1", default-features = false }
rand = "0.8.5"
ratatui = "0.29.0"
ratatui-image = { version = "8.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-webpki-roots-no-provider", "json", "charset", "http2"] }
rsa = "0.9.9"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
