[package]
name = "concord"
version = "1.1.1"
edition = "2024"
rust-version = "1.85"
description = "A terminal user interface client for Discord"
homepage = "https://github.com/chojs23/concord"
repository = "https://github.com/chojs23/concord"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["discord", "tui", "terminal", "ratatui", "client"]
categories = ["command-line-utilities"]
exclude = ["docs/", ".github/", "dist-workspace.toml"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
image = "0.25.10"
mime_guess = "2.0"
notify-rust = "4"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = [
  "crossterm",
  "image-defaults",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-webpki-roots-no-provider",
  "json",
  "charset",
  "http2",
  "cookies",
  "gzip",
  "deflate",
  "brotli",
  "zstd",
  "multipart",
] }
rsa = "0.9"
rustls = { version = "0.23.39", default-features = false, features = [
  "ring",
  "std",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.27", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots",
] }
toml = "1.1.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = true
